<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.soglam.activities.ContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/contact_image"
            android:contentDescription="@string/contact_image"
            android:scaleType="fitStart" />

        <TextView
            android:id="@+id/contact_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_image"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_intro"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name"
                android:inputType="textPersonName|textAutoComplete" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_name"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/contact_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_subject"
                android:inputType="textEmailSubject" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_subject"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/contact_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_email"
                android:inputType="textEmailAddress|textAutoComplete" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_email"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/contact_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_phone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_phone"
            android:layout_marginBottom="5dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/contact_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_message"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/contact_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_message"
            android:background="@drawable/button_style"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="10dp"
            android:text="@string/send"
            android:textColor="#c7b03e" />
    </RelativeLayout>
</ScrollView>